Fix text-align for Personal Statement paragraphs

--- a/src/components/personal-statement/PersonalStatement.css
+++ b/src/components/personal-statement/PersonalStatement.css
@@ -24,7 +24,7 @@
   }
 
   &-para {
-    text-align: start;
+    text-align: left;
     font-size: 1.25em;
     line-height: 2rem;
   }
